--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nestjs/common": "^7.6.14",
     "@nestjs/core": "^7.6.14",
     "@nestjs/platform-express": "^7.6.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6"
   },
