--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "nest-full-example",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "jest",
     "build": "ts-node ./build/build.dev.ts",
-    "build:prd": "webpack --config webpack.config.prd.js"
+    "build:prd": "webpack --config webpack.config.prd.js",
+    "start": "nodemon --config nodemon.json"
   },
   "author": "",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "@nestjs/testing": "^7.6.14",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
+    "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
