--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nestjs/testing": "^7.6.14",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
