--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "serialize-javascript": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^7.6.14",
