--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^26.0.21",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "assets-webpack-plugin": "^7.0.0",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
