--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "test": "jest",
     "build": "ts-node ./build/build.dev.ts",
+    "start": "npm-run-all --parallel build \"nodemon --config nodemon.json\"",
     "build:prd": "ts-node ./build/build.prd.ts",
-    "start": "nodemon --config nodemon.json"
+    "build:server": "tsc -p tsconfig.prd.json"
   },
   "author": "",
   "license": "MIT",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^17.0.3",
     "assets-webpack-plugin": "^7.0.0",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^26.5.4",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
