--- a/tsconfig.prd.json
+++ b/tsconfig.prd.json
@@ -7,10 +7,10 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "ES2016",
     "jsx": "react",
-    "sourceMap": true,
-    "outDir": "./dist",
+    "sourceMap": false,
+    "outDir": "dist",
     "baseUrl": "./",
     "incremental": true
   },
@@ -18,5 +18,6 @@
     "node_modules",
     "build",
     "dist",
-  ]
+  ],
+  "files":["./src/main.ts"]
 }
