--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,12 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "allowJs": true
   },
+  "include": [
+    "/node_modules/packages/",
+  ],
   "exclude": [
     "node_modules",
     "dist",
