--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@packages/common",
   "version": "0.0.1",
-  "description": "> TODO: description",
-  "license": "ISC",
+  "description": "",
+  "license": "MIT",
   "main": "./src/index.ts",
   "directories": {
     "lib": "lib",
