--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -2,5 +2,8 @@
   "name": "@app/app2",
   "version": "0.0.1",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@packages/client": "0.0.1"
+  }
 }
