--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "server",
   "license": "MIT",
-  "main": "./lib",
+  "main": "./src",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
