--- a/src/app2/package.json
+++ b/src/app2/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@packages/client": "0.0.1"
+    "@packages/client": "0.0.1",
+    "@packages/server": "^0.0.1"
   }
 }
